--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="DiscordRichPresence" version="1.0.175" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Siticone.Desktop.UI" version="2.0.9" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
   <package id="System.Interactive.Async" version="5.0.0" targetFramework="net472" />
